tests/ui/unboxed-closures/unboxed-closure-feature-gate.stderr
error[E0658]: parenthetical notation is only stable when used with `Fn`-family traits
  --> $DIR/unboxed-closure-feature-gate.rs:13:20
   |
LL |     let x: Box<dyn Foo(isize)>;
   |                    ^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
